李燕飞：首页管理员信息，动态消息信息模块接口！
